Refactor code and add walkthrough